syntax = "proto3";

package thrico;

// User Service
service UserService {
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (OperationResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}

// Entity Service
service EntityService {
  rpc GetEntity(GetEntityRequest) returns (EntityResponse);
  rpc CreateEntity(CreateEntityRequest) returns (EntityResponse);
  rpc UpdateEntity(UpdateEntityRequest) returns (EntityResponse);
  rpc DeleteEntity(DeleteEntityRequest) returns (OperationResponse);
  rpc ListEntities(ListEntitiesRequest) returns (ListEntitiesResponse);
}

// Common Messages
message OperationResponse {
  bool success = 1;
  string message = 2;
  optional Error error = 3;
}

message Error {
  string code = 1;
  string message = 2;
}

message PaginationRequest {
  int32 page = 1;
  int32 limit = 2;
}

message PaginationMeta {
  int32 current_page = 1;
  int32 total_pages = 2;
  int32 total_items = 3;
  int32 items_per_page = 4;
  bool has_next_page = 5;
  bool has_previous_page = 6;
}

// User Messages
message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  string role = 6;
  string status = 7;
  string region = 8;
  optional string entity_id = 9;
  bool email_verified = 10;
  optional string phone_number = 11;
  bool phone_verified = 12;
  optional string last_login_at = 13;
  string created_at = 14;
  string updated_at = 15;
}

message GetUserRequest {
  string id = 1;
}

message CreateUserRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
  string region = 6;
  optional string phone_number = 7;
}

message UpdateUserRequest {
  string id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string phone_number = 4;
  optional string status = 5;
}

message DeleteUserRequest {
  string id = 1;
}

message ListUsersRequest {
  optional PaginationRequest pagination = 1;
  optional string region = 2;
  optional string status = 3;
  optional string role = 4;
}

message UserResponse {
  bool success = 1;
  optional User user = 2;
  optional Error error = 3;
}

message ListUsersResponse {
  bool success = 1;
  repeated User users = 2;
  optional PaginationMeta pagination = 3;
  optional Error error = 4;
}

// Entity Messages
message Entity {
  string id = 1;
  string name = 2;
  string slug = 3;
  optional string description = 4;
  string status = 5;
  string region = 6;
  string created_at = 7;
  string updated_at = 8;
}

message GetEntityRequest {
  string id = 1;
}

message CreateEntityRequest {
  string name = 1;
  string slug = 2;
  optional string description = 3;
  string region = 4;
}

message UpdateEntityRequest {
  string id = 1;
  optional string name = 2;
  optional string description = 3;
  optional string status = 4;
}

message DeleteEntityRequest {
  string id = 1;
}

message ListEntitiesRequest {
  optional PaginationRequest pagination = 1;
  optional string region = 2;
  optional string status = 3;
}

message EntityResponse {
  bool success = 1;
  optional Entity entity = 2;
  optional Error error = 3;
}

message ListEntitiesResponse {
  bool success = 1;
  repeated Entity entities = 2;
  optional PaginationMeta pagination = 3;
  optional Error error = 4;
}
